kubernetes/uat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swagger-api-deployment
  labels:
    app: swagger-api
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  selector:
    matchLabels:
      app: swagger-api
  template:
    metadata:
      labels:
        app: swagger-api
    spec:
      containers:
        - name: swagger-api
          image: infrastructure/api_multiple_domain_swagger
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: 1024Mi
            requests:
              cpu: 10m
              memory: 265Mi
          livenessProbe:
            httpGet:
              path: /_swagger/health
              port: 8080
            initialDelaySeconds: 5
            failureThreshold: 2
            periodSeconds: 5
