kubernetes/uat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: swagger-api-service
  labels:
    app: swagger-api
spec:
  selector:
    app: swagger-api
  type: NodePort
  ports:
    - name: http
      port: 8080
      targetPort: 8080
